--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "country-flag-icons": "^1.4.19",
+    "date-fns": "^2.28.0",
+    "firebase": "^9.6.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firestore": "^1.0.1",
     "react-scripts": "4.0.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
