--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "country-flag-icons": "^1.4.19",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.2",
-    "node-sass": "^4.14.1",
+    "gh-pages": "^3.2.3",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firestore": "^1.0.1",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
-    "uuid": "^8.3.2",
+    "remixicon": "^2.5.0",
     "web-vitals": "^1.0.1"
   },
   "homepage": "https://qretsar.github.io/music-player/",
